Move schedule realised