@@ -1,16 +1,15 @@
 package com.example.alexandria.service;
 
-import com.example.alexandria.repository.*;
+import com.example.alexandria.repository.ScheduleRepository;
 import com.example.alexandria.repository.entity.Group;
-import com.example.alexandria.repository.entity.Subject;
 import com.example.alexandria.repository.entity.Schedule;
+import com.example.alexandria.repository.entity.Subject;
 import com.example.alexandria.repository.entity.Teacher;
 import com.example.alexandria.service.dto.ScheduleDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,21 +26,21 @@ public class ScheduleService {
         return scheduleRepository.findAll()
                 .stream()
                 .map(this::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ScheduleDTO> findScheduleByGroupName(String groupName) {
         return scheduleRepository.findScheduleByGroupId_Name(groupName)
                 .stream()
                 .map(this::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ScheduleDTO create(ScheduleDTO schedule) {
         var savedSchedule = scheduleRepository.save(Schedule.builder()
                 .id(schedule.id())
                 .dayOfWeek(schedule.day_of_week())
-                .lesson_num(schedule.lesson_num())
+                .lessonNum(schedule.lesson_num())
                 .weekType(schedule.week_type())
                 .subject(Subject.builder().id(schedule.subject_id()).build())
                 .group(Group.builder().id(schedule.group_id()).build())
@@ -50,7 +49,7 @@ public class ScheduleService {
         return map(savedSchedule);
     }
 
-    public ScheduleDTO update(Long id, ScheduleDTO updatedSchedule) {
+    public void update(Long id, ScheduleDTO updatedSchedule) {
         Schedule scheduleToUpdate = scheduleRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Schedule not found for id: " + id));
 
@@ -58,11 +57,10 @@ public class ScheduleService {
         scheduleToUpdate.setGroup(Group.builder().id(updatedSchedule.group_id()).build());
         scheduleToUpdate.setTeacher(Teacher.builder().id(updatedSchedule.teacher_id()).build());
         scheduleToUpdate.setDayOfWeek(updatedSchedule.day_of_week());
-        scheduleToUpdate.setLesson_num(updatedSchedule.lesson_num());
+        scheduleToUpdate.setLessonNum(updatedSchedule.lesson_num());
         scheduleToUpdate.setWeekType(updatedSchedule.week_type());
 
-        Schedule updated = scheduleRepository.save(scheduleToUpdate);
-        return map(updated);
+        scheduleRepository.save(scheduleToUpdate);
     }
 
     public void delete(Long id) {
@@ -77,7 +75,7 @@ public class ScheduleService {
                 .group_id(schedule.getGroup().getId())
                 .teacher_id(schedule.getTeacher().getId())
                 .week_type(schedule.getWeekType())
-                .lesson_num(schedule.getLesson_num())
+                .lesson_num(schedule.getLessonNum())
                 .build();
     }
 }
